# NeoGraph

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.arm64-smoke  Doxyfile  LICENSE  PYBIND11_HANDOFF.md  README.md  ROADMAP_v1.md  THIRD_PARTY_LICENSES  THIRD_PARTY_LICENSES.md  TODO_v0.3.md  pyproject.toml
benchmarks/: README.md  bench_async_fanout.cpp  bench_async_http.cpp  bench_autogen.py  bench_checkpoint_store.cpp  (+8 more)
bindings/python/: CMakeLists.txt
bindings/python/examples/: .env.example  01_minimal.py  02_tool_dispatch.py  03_send_fanout.py  04_async_concurrent.py  05_openai_provider.py  06_react_agent.py  07_checkpoint_hitl.py  08_intent_routing.py  09_state_management.py  10_command_routing.py  11_reflexion.py  12_self_ask.py  13_multi_agent_debate.py  14_graph_to_json.py  15_graph_from_json.py  16_deep_research_chat.py  17_deep_research_crawl4ai.py  18_node_cache.py  19_streaming_messages.py  20_otel_tracing.py  21_http2_transport.py  22_self_evolving_graph.py  23_evolving_chat_agent.py  24_tool_approval_gate.py  25_async_tools.py  26_mcp_tools.py  27_a2a_server.py  28_acp_agent.py  README.md  _common.py  _protocol_demo.py  my_graph.json
bindings/python/neograph/: __init__.py  llm.py
bindings/python/neograph_engine/: __init__.py  llm.py  openinference.py  protocol.py  state_view.py  streaming.py  tracing.py
bindings/python/src/: bind_a2a.cpp  bind_graph.cpp  bind_mcp.cpp  bind_node.cpp  bind_parity.cpp  bind_provider.cpp  bind_state.cpp  json_bridge.cpp  json_bridge.h  module.cpp  opaque_types.h
bindings/python/tests/: mcp_echo_server.py  test_async.py  test_async_cancel_live_llm.py  test_async_cancel_live_llm_fanout.py  test_async_tool.py  test_custom_nodes.py  test_custom_registries.py  test_dynamic_interrupt.py  test_emit_token_helper.py  test_execute_stream_dispatch.py  test_fanout_worker_warning.py  test_llm_call_contract.py  test_max_steps_status.py  test_mcp.py  test_node_cache.py  test_openinference.py  test_protocol_hosting.py  test_protocol_sdk_e2e.py  test_provider_lifetime.py  test_python_store_backends.py  test_readme_quickstart.py  test_resume_if_exists.py  test_smoke.py  test_state_history.py  test_state_view.py  test_streaming.py  test_streaming_only_error_hint.py  test_sync_cancel.py  test_tool_gate.py  test_tools.py  test_topology_container_types.py  test_tracing.py  test_update_state_shapes.py  test_usage_accounting.py
examples/cookbook/jarvis/: .gitignore  CMakeLists.txt  README.md
examples/cookbook/jarvis/assets/: download.sh
examples/cookbook/jarvis/bench/: Dockerfile.langgraph  Dockerfile.mcp  Dockerfile.neograph  Dockerfile.proxy  README.md  analyze.py  analyze_proxy.py  analyze_ttft.py  driver.py  langgraph_twin.py  nginx-groq.conf  run_bench.sh  run_bench_e2e.sh  run_bench_proxy.sh  turns_e2e.txt  turns_groq.txt  turns_mock.txt
examples/cookbook/jarvis/bench/pybind/: README.md  perturn.py  startup_rss.py
examples/cookbook/jarvis/config/: jarvis_graph.json  persona.txt
examples/cookbook/jarvis/config-bench/: jarvis_graph.json
examples/cookbook/jarvis/config-bench-e2e/: mcp_catalog.json
examples/cookbook/jarvis/config-demo/real-tools/: jarvis_graph.json
examples/cookbook/jarvis/config-moonshine/: agent_registry.json  jarvis_graph.json  mcp_catalog.json
examples/cookbook/jarvis/docs/: architecture.md
examples/cookbook/jarvis/scripts/: build_whisper_hip.sh  demo_mcp_server.py  jarvis_repl.py  run_jarvis.sh  run_session.sh
examples/cookbook/jarvis/specialists/coder/: server.cpp
examples/cookbook/jarvis/specialists/researcher/: server.cpp
examples/cookbook/jarvis/src/: main.cpp
examples/cookbook/jarvis/src/audio/: audio_playback.cpp  audio_playback.h  mic_input.cpp  mic_input.h  miniaudio_impl.cpp  tts_output.cpp  tts_output.h
examples/cookbook/jarvis/src/memory/: conversation_store.cpp  json_file_store.cpp  json_file_store.h
examples/cookbook/jarvis/src/orchestrator/: agent_dispatcher.cpp  agent_dispatcher.h  intent_router_node.cpp  mcp_catalog.cpp  mcp_catalog.h
examples/cookbook/jarvis/src/stt/: moonshine_node.cpp  moonshine_node.h  whisper_node.cpp
tests/: CMakeLists.txt  lsan_suppressions.txt  test_a2a_client.cpp  test_a2a_server.cpp  test_a2a_types.cpp  test_acp_server.cpp  test_acp_types.cpp  test_admin_api_barrier_preservation.cpp  test_async_conn_pool.cpp  test_async_get.cpp  test_async_http_errors.cpp  test_async_http_options.cpp  test_async_http_stream.cpp  test_async_run_sync_pool.cpp  test_async_sse_parser.cpp  test_async_tool.cpp  test_async_ws_codec.cpp  test_async_ws_loopback.cpp  test_barrier_persistence.cpp  test_cancel_token_fork.cpp  test_cancel_token_propagation.cpp  test_channel_write_mode.cpp  test_checkpoint.cpp  test_checkpoint_async_default.cpp  test_compiler.cpp  test_compiler_strict.cpp  test_completion_provider.cpp  test_concurrent_stress.cpp  test_coordinator.cpp  test_corpus.cpp  test_deep_research_human_review.cpp  test_deep_research_provider_failure.cpp  test_elaborator.cpp  test_engine_config.cpp  test_error_messages_friendly.cpp  test_evolution.cpp  test_execute_stream_only_dispatch.cpp  test_executor_async_parallel.cpp  test_executor_async_retry.cpp  test_graph_engine.cpp  (+55 more)
tests/fixtures/: mcp_stdio_echo.py  postgres_checkpoint_origin.h  schema_snapshot.json
tests/fixtures/harness_tasks/: corrective_rag.json  intent_router.json  parallel_fanout.json  subgraph_composition.json
tests/fixtures/topology_corpus/: e10_closed_uncovered.json  e10_empty_routes.json  e10_open_no_default.json  e11_trapped_cycle.json  e3_dangling_edge.json  e3_interrupt_unknown.json  e4_undeclared_write.json  e5_overwrite_race.json  e6_dead_channel.json  e7_unreachable.json  e8_barrier_unsignaled.json  e9_fanin_no_barrier.json  manifest.json  valid_full.json  valid_intent_router.json  valid_minimal.json
tests/fuzz/: CMakeLists.txt  fuzz_graph_compile.cpp
tests/fuzz/corpus/: .gitignore
tests/fuzz/corpus/graph_compile/: 01_minimal.json  02_react.json  03_with_barrier.json  04_retry_policy.json
tests/integration/find_package/: CMakeLists.txt  main.cpp
(+332 files in other folders)
